# projetS7

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  a_lire  autogen.sh  configure  configure.ac  install_env.sh  rebuild.sh  setup_env.sh  voix.cbp
annexes/: DTW.doc  Mel.xlsx  Word_recognition.pptx  exposer_methodes_danalyse_acoustique.ppt  forward_backward.txt  journal de bord.docx  leroux.txt  log_book.docx  mahalanobis  projetS7.doc  projetS7.docx  projetS7_Eng.doc  projetS7_Eng.docx
annexes/ihm/: ihm.doc
install_env_script/: install_gfx.sh  install_libsndfile.sh  install_openal.sh  install_snd_tool.sh
src/: Makefile  Makefile.am  Makefile.in  MyAL.cpp  MyAL.h  event_audio.h  ft.cpp  ft.h  main.cpp  main.cpp.back.cpp  sdl.cpp  sdl.h  traitement.cpp  traitement.h  util_tmp.h
src/Game/: Choix_Utilisateur.cpp  Choix_Utilisateur.h  Drawable.cpp  Drawable.h  Frog.cpp  Frog.h  Game.cpp  Game.h  Item.cpp  Item.h  Jeu  Joueur.cpp  Joueur.h  Makefile  Makefile.am  Makefile.in  Map.cpp  Map.h  Menu.cpp  Menu.cpp~  Menu.h  Menu_Option.cpp  Menu_Option.h  Menu_enregistrement.cpp  Menu_enregistrement.h  Score.cpp  Score.h  main.cpp  tags
src/Game/.deps/: Drawable.Po  Frog.Po  Game.Po  Item.Po  Joueur.Po  Map.Po  Menu.Po  MyAL.Po  Score.Po  ft.Po  main.Po  traitement.Po
src/Game/data/: joueur.lst  joueur_courant.name
src/test/: Makefile.am  dtw2.cpp  dtw3.cpp  dtw_all.cpp  test  test.cpp  test_detecter_debut_signal.cpp  test_draw_spectro.cpp  test_draw_spectro_mel.cpp  test_dtw.cpp  test_dtw_enreg.cpp  test_load_sound.cpp  test_save_sound.cpp
