bin_PROGRAMS = test test_load_sound test_draw_spectro test_draw_spectro_mel test_save_sound test_dtw test_dtw_enreg test_detecter_debut_signal dtw_all

AM_CXXFLAGS = $(INTI_CFLAGS) $(SDL_CFLAGS)
test_SOURCES = test.cpp
test_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_load_sound_SOURCES = test_load_sound.cpp ../MyAL.cpp ../MyAL.h ../traitement.cpp ../traitement.h ../ft.cpp ../ft.h
test_load_sound_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_save_sound_SOURCES = test_save_sound.cpp ../MyAL.cpp ../MyAL.h ../traitement.cpp ../traitement.h ../ft.cpp ../ft.h
test_save_sound_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_draw_spectro_SOURCES = test_draw_spectro.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
test_draw_spectro_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_draw_spectro_mel_SOURCES = test_draw_spectro_mel.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
test_draw_spectro_mel_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_dtw_SOURCES = test_dtw.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../ft.cpp ../ft.h
test_dtw_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_dtw_enreg_SOURCES = test_dtw_enreg.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../ft.cpp ../ft.h
test_dtw_enreg_LDADD = $(INTI_LIBS) $(SDL_LIBS)
test_detecter_debut_signal_SOURCES = test_detecter_debut_signal.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
test_detecter_debut_signal_LDADD = $(INTI_LIBS) $(SDL_LIBS)
dtw_all_SOURCES = dtw_all.cpp ../MyAL.cpp ../MyAL.h ../traitement.h ../traitement.cpp ../sdl.h ../ft.cpp ../ft.h
dtw_all_LDADD = $(INTI_LIBS) $(SDL_LIBS)
